--- a/default_ca/ca.conf
+++ b/default_ca/ca.conf
@@ -2,13 +2,24 @@
 default_ca = my_ca
 
 [ my_ca ]
-serial = ./serial
-database = ./index.txt
-new_certs_dir = ./newcerts
-certificate = ./ca.crt
-private_key = ./ca.key
+
+dir = ./default_ca
+serial = $dir/serial
+database = $dir/index.txt
+new_certs_dir = $dir/newcerts
+certificate = $dir/ca.crt
+private_key = $dir/ca.key
+
+name_opt = ca_default
+cert_opt = ca_default
 default_md = sha256
 default_days = 365
+x509_extensions = usr_cert
+
+# TODO: CRL
+crl_extensions = crl_ext
+default_crl_days = 30
+
 policy = my_policy
 
 [ my_policy ]
@@ -18,3 +29,12 @@ localityName = match
 organizationName = match
 commonName = match
 emailAddress = match
+
+[ usr_cert ]
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always, issuer:always
+basicConstraints = critical, CA:FALSE
+keyUsage = critical, nonRepudiation, digitalSignature, keyEncipherment
+
+[ crl_ext ]
+authorityKeyIdentifier = keyid:always
