--- a/default_req/req.conf
+++ b/default_req/req.conf
@@ -7,7 +7,14 @@ distinguished_name = my_req_distinguished_name
 req_extensions = my_extensions
 
 [ my_extensions ]
+#subjectAltName = @my_subject_alt_names
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always, issuer:always
 basicConstraints = critical, CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+
+[ my_subject_alt_names ]
+DNS.1 = *.example.org
+DNS.2 = *.example.net
+DNS.3 = example.org
+DNS.4 = example.net
