--- a/default_ca/ca.conf
+++ b/default_ca/ca.conf
@@ -15,6 +15,7 @@ cert_opt = ca_default
 default_md = sha256
 default_days = 365
 x509_extensions = usr_cert
+copy_extensions = copy
 
 # TODO: CRL
 crl_extensions = crl_ext
