Implement CA signing

--- a/default_ca/ca.conf
+++ b/default_ca/ca.conf
@@ -3,17 +3,19 @@ default_ca = my_ca
 
 [ my_ca ]
 
-dir = ./default_ca
+dir = ./ca
 serial = $dir/serial
-database = $dir/index.txt
 new_certs_dir = $dir/newcerts
 certificate = $dir/ca.crt
 private_key = $dir/ca.key
 
+database = $dir/index.txt
+unique_subject = no
+
 name_opt = ca_default
 cert_opt = ca_default
 default_md = sha256
-default_days = 365
+default_days = 100
 x509_extensions = usr_cert
 copy_extensions = copy
 
