Prepare for intermediate CA

--- a/default_ca/root_init_req.conf
+++ b/default_ca/root_init_req.conf
@@ -9,5 +9,5 @@ x509_extensions = my_extensions
 [ my_extensions ]
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always, issuer:always
-basicConstraints = critical, CA:TRUE, pathlen:0
+basicConstraints = critical, CA:TRUE
 keyUsage = critical, cRLSign, keyCertSign
