Make root CA use the word 'root' in its filenames

--- a/default_ca/root_footer.conf
+++ b/default_ca/root_footer.conf
@@ -1,9 +1,9 @@
 # Common CA config will be prepended above this line
 
-serial = $dir/serial
-certificate = $dir/ca.crt
-private_key = $dir/ca.key
-database = $dir/index.txt
+certificate = $dir/root.crt
+private_key = $dir/root.key
+serial = $dir/rootserial.txt
+database = $dir/rootindex.txt
 
 [ output_cert ]
 subjectKeyIdentifier = hash
