Add intermediate CA

--- a/default_ca/root_footer.conf
+++ b/default_ca/root_footer.conf
@@ -8,5 +8,5 @@ database = $dir/rootindex.txt
 [ output_cert ]
 subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always, issuer:always
-basicConstraints = critical, CA:FALSE
-keyUsage = critical, nonRepudiation, digitalSignature, keyEncipherment
+basicConstraints = critical, CA:TRUE, pathlen:0
+keyUsage = critical, cRLSign, keyCertSign
