--- a/default_ca/root_init_req_footer.conf
+++ b/default_ca/root_init_req_footer.conf
@@ -1,9 +1,5 @@
-[ req ]
-default_md = sha256
-prompt = no
-utf8 = yes
-string_mask = utf8only
-distinguished_name = my_req_distinguished_name
+# Common CA config will be prepended above this line
+
 x509_extensions = my_extensions
 
 [ my_extensions ]
