Add underscore in CA filenames

--- a/default_ca/intermediate_footer.conf
+++ b/default_ca/intermediate_footer.conf
@@ -2,8 +2,8 @@
 
 certificate = $dir/intermediate.crt
 private_key = $dir/intermediate.key
-serial = $dir/intermediateserial.txt
-database = $dir/intermediateindex.txt
+serial = $dir/intermediate_serial.txt
+database = $dir/intermediate_index.txt
 
 [ output_cert ]
 subjectKeyIdentifier = hash
