--- a/default_ca/root_footer.conf
+++ b/default_ca/root_footer.conf
@@ -2,8 +2,8 @@
 
 certificate = $dir/root.crt
 private_key = $dir/root.key
-serial = $dir/rootserial.txt
-database = $dir/rootindex.txt
+serial = $dir/root_serial.txt
+database = $dir/root_index.txt
 
 [ output_cert ]
 subjectKeyIdentifier = hash
