Implement CRL generation

--- a/default_ca/intermediate_footer.conf
+++ b/default_ca/intermediate_footer.conf
@@ -4,6 +4,7 @@ certificate = $dir/intermediate.crt
 private_key = $dir/intermediate.key
 serial = $dir/intermediate_serial.txt
 database = $dir/intermediate_index.txt
+crlnumber = $dir/intermediate_crlnumber.txt
 
 [ output_cert ]
 subjectKeyIdentifier = hash
