--- a/default_ca/root_footer.conf
+++ b/default_ca/root_footer.conf
@@ -4,6 +4,7 @@ certificate = $dir/root.crt
 private_key = $dir/root.key
 serial = $dir/root_serial.txt
 database = $dir/root_index.txt
+crlnumber = $dir/root_crlnumber.txt
 
 [ output_cert ]
 subjectKeyIdentifier = hash
