Put each CA in its own folder

--- a/default_ca/root/config_footer.conf
+++ b/default_ca/root/config_footer.conf
@@ -1,10 +1,10 @@
 # Common CA config will be prepended above this line
 
-certificate = $dir/root.crt
-private_key = $dir/root.key
-serial = $dir/root_serial.txt
-database = $dir/root_index.txt
-crlnumber = $dir/root_crlnumber.txt
+certificate = $dir/root/ca.crt
+private_key = $dir/root/ca.key
+serial = $dir/root/serial.txt
+database = $dir/root/index.txt
+crlnumber = $dir/root/crlnumber.txt
 
 [ output_cert ]
 subjectKeyIdentifier = hash
