Split output type out of CA main conf

--- a/default_ca/common/config_header.conf
+++ b/default_ca/common/config_header.conf
@@ -32,4 +32,4 @@ default_crl_days = 30
 
 policy = my_policy
 
-# Specific CA config will be appended after this line
+# Config specific to a single key will be appended below this line
