--- a/default_ca/root/config_footer.conf
+++ b/default_ca/root/config_footer.conf
@@ -1,4 +1,4 @@
-# Common CA config will be prepended above this line
+# Config common to all CAs will be prepended above this line
 
 certificate = $dir/root/ca.crt
 private_key = $dir/root/ca.key
@@ -6,8 +6,4 @@ serial = $dir/root/serial.txt
 database = $dir/root/index.txt
 crlnumber = $dir/root/crlnumber.txt
 
-[ output_cert ]
-subjectKeyIdentifier = hash
-authorityKeyIdentifier = keyid:always, issuer:always
-basicConstraints = critical, CA:TRUE, pathlen:0
-keyUsage = critical, cRLSign, keyCertSign
+# Config specific to a single output type will be appended below this line
