Prepare for multiple output types

--- a/default/ca/common/config_header.conf
+++ b/default/ca/common/config_header.conf
@@ -15,6 +15,7 @@ authorityKeyIdentifier = keyid:always
 [ my_ca ]
 
 dir = ./ca
+# newcerts will act as write-only
 new_certs_dir = $dir/newcerts
 unique_subject = no
 
@@ -23,8 +24,7 @@ cert_opt = ca_default
 default_md = sha256
 default_days = 100
 preserve = no
-x509_extensions = output_cert
-copy_extensions = copy
+x509_extensions = my_ext
 
 # TODO: CRL
 crl_extensions = crl_ext
