Add AIA and CRL extensions

--- a/default/ca/common/intermediate_type.conf
+++ b/default/ca/common/intermediate_type.conf
@@ -4,4 +4,4 @@
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:TRUE, pathlen:0
 keyUsage = critical, cRLSign, keyCertSign
-# authorityKeyUsage will be appended below on the CA side
+# CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
