--- a/default/all/generic_type.conf
+++ b/default/all/generic_type.conf
@@ -12,4 +12,4 @@ DNS.4 = example.net
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
-# authorityKeyUsage will be appended below on the CA side
+# CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
