--- a/default/ca/common/root_type.conf
+++ b/default/ca/common/root_type.conf
@@ -4,4 +4,4 @@
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:TRUE
 keyUsage = critical, cRLSign, keyCertSign
-# authorityKeyUsage will be appended below
+# CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
