Properly handle CA info with output types

--- a/default/ca/common/config_header.conf
+++ b/default/ca/common/config_header.conf
@@ -24,7 +24,8 @@ cert_opt = ca_default
 default_md = sha256
 default_days = 100
 preserve = no
-x509_extensions = my_ext
+# default_ext will be set to the most common type of certificate that this CA should output
+x509_extensions = default_ext
 
 # TODO: CRL
 crl_extensions = crl_ext
