--- a/default/ca/common/intermediate_type.conf
+++ b/default/ca/common/intermediate_type.conf
@@ -1,6 +1,6 @@
 # Config common to all CSRs will be prepended above this line
 
-[ my_ext ]
+[ default_ext ]
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:TRUE, pathlen:0
 keyUsage = critical, cRLSign, keyCertSign
