--- a/default/identity/req_header_header.conf
+++ b/default/identity/req_header_header.conf
@@ -7,8 +7,8 @@ string_mask = utf8only
 distinguished_name = my_dn
 
 # Only one of the two below will be used
-x509_extensions = my_ext # Only used for root init req
-req_extensions = my_ext # Used for everything else
+x509_extensions = default_ext # Only used for root init req
+req_extensions = default_ext # Used for everything else
 
 [ my_dn ]
 
