--- a/default/all/generic_type.conf
+++ b/default/all/generic_type.conf
@@ -1,14 +1,14 @@
 # Config common to all CSRs will be prepended above this line
 
 # TODO move to HTTPS configs only
-[ my_subject_alt_names ]
+[ default_ext_subject_alt_names ]
 DNS.1 = *.example.org
 DNS.2 = *.example.net
 DNS.3 = example.org
 DNS.4 = example.net
 
-[ my_ext ]
-#subjectAltName = @my_subject_alt_names
+[ default_ext ]
+#subjectAltName = @default_ext_subject_alt_names
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
