--- a/default/ca/root/config_footer.conf
+++ b/default/ca/root/config_footer.conf
@@ -6,4 +6,4 @@ serial = $dir/root/serial.txt
 database = $dir/root/index.txt
 crlnumber = $dir/root/crlnumber.txt
 
-# Config specific to a single output type will be appended below this line
+# Configurations specific to a single output type will be appended below this line
