--- a/default/all/generic_type.conf
+++ b/default/all/generic_type.conf
@@ -1,4 +1,4 @@
-# Config common to all CSRs will be prepended above this line
+# Config common to all CSRs will be prepended above
 
 # TODO move to HTTPS configs only
 [ default_ext_subject_alt_names ]
@@ -11,5 +11,5 @@ DNS.4 = example.net
 #subjectAltName = @default_ext_subject_alt_names
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
-keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+keyUsage = critical, nonRepudiation, digitalSignature, keyEncipherment
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
