--- a/default/ca/common/ocsp_type.conf
+++ b/default/ca/common/ocsp_type.conf
@@ -1,7 +1,8 @@
 # Config common to all CSRs will be prepended above
 
-[ default_ext ]
+[ ocsp_ext ]
 subjectKeyIdentifier = hash
-basicConstraints = critical, CA:TRUE, pathlen:0
-keyUsage = critical, cRLSign, keyCertSign
+basicConstraints = critical, CA:FALSE
+keyUsage = critical, nonRepudiation, digitalSignature
+extendedKeyUsage = critical, OCSPSigning
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
