--- a/default/ca/common/root_type.conf
+++ b/default/ca/common/root_type.conf
@@ -1,4 +1,4 @@
-# Config common to all CSRs will be prepended above this line
+# Config common to all CSRs will be prepended above
 
 [ default_ext ]
 subjectKeyIdentifier = hash
