Unspecialcase root CA

--- a/default/ca/common/intermediate_type.conf
+++ b/default/ca/common/intermediate_type.conf
@@ -1,6 +1,6 @@
 # Config common to all CSRs will be prepended above
 
-[ default_ext ]
+[ init_ext ]
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:TRUE, pathlen:0
 keyUsage = critical, cRLSign, keyCertSign
