--- a/default/ca/common/root_type.conf
+++ b/default/ca/common/root_type.conf
@@ -1,6 +1,6 @@
 # Config common to all CSRs will be prepended above
 
-[ default_ext ]
+[ bootstrap_ext ]
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:TRUE
 keyUsage = critical, cRLSign, keyCertSign
