Expose extension profile types to CLI

--- a/default/all/generic_type.conf
+++ b/default/all/generic_type.conf
@@ -1,13 +1,13 @@
 # Config common to all CSRs will be prepended above
 
 # TODO move to HTTPS configs only
-[ default_ext_subject_alt_names ]
+[ generic_ext_subject_alt_names ]
 DNS.1 = *.example.org
 DNS.2 = *.example.net
 DNS.3 = example.org
 DNS.4 = example.net
 
-[ default_ext ]
+[ generic_ext ]
 #subjectAltName = @default_ext_subject_alt_names
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
