--- a/default/ca/common/config_header.conf
+++ b/default/ca/common/config_header.conf
@@ -10,7 +10,9 @@ commonName = match
 emailAddress = match
 
 [ crl_ext ]
-authorityKeyIdentifier = keyid:always
+authorityKeyIdentifier = keyid:always, issuer: always
+authorityInfoAccess = @ocsp_info
+issuingDistributionPoint = critical, @idp_info
 
 [ my_ca ]
 
