--- a/default/ca/root/config_footer.conf
+++ b/default/ca/root/config_footer.conf
@@ -2,8 +2,8 @@
 
 certificate = $dir/root/ca.crt
 private_key = $dir/root/ca.key
-serial = $dir/root/serial.txt
+serial = $dir/root/ca.srl
 database = $dir/root/index.txt
-crlnumber = $dir/root/crlnumber.txt
+crlnumber = $dir/root/crl.srl
 
 # Configurations specific to a single output type will be appended below this line
