--- a/default/all/generic_type.conf
+++ b/default/all/generic_type.conf
@@ -12,4 +12,5 @@ DNS.4 = example.net
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
 keyUsage = critical, nonRepudiation, digitalSignature, keyEncipherment
+certificatePolicies = 2.5.29.32.0
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
