--- a/default/ca/init/intermediate_type.conf
+++ b/default/ca/init/intermediate_type.conf
@@ -4,4 +4,5 @@
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:TRUE, pathlen:0
 keyUsage = critical, cRLSign, keyCertSign
+certificatePolicies = 2.5.29.32.0
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
