--- a/default/all/vpn_client_type.conf
+++ b/default/all/vpn_client_type.conf
@@ -3,7 +3,7 @@
 [ vpnClient_ext ]
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
-keyUsage = critical, digitalSignature, keyEncipherment, keyAgreement
+keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = critical, clientAuth
 certificatePolicies = 2.5.29.32.0
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
