Generify VPN -> TLS

--- a/default/all/tls_server_type.conf
+++ b/default/all/tls_server_type.conf
@@ -1,9 +1,9 @@
 # Config common to all CSRs will be prepended above
 
-[ vpnClient_ext ]
+[ tlsServer_ext ]
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
-keyUsage = critical, digitalSignature, keyEncipherment
-extendedKeyUsage = critical, clientAuth
+keyUsage = critical, digitalSignature, keyEncipherment, keyAgreement
+extendedKeyUsage = critical, serverAuth
 certificatePolicies = 2.5.29.32.0
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
