--- a/default/all/tls_client_type.conf
+++ b/default/all/tls_client_type.conf
@@ -1,9 +1,9 @@
 # Config common to all CSRs will be prepended above
 
-[ vpnServer_ext ]
+[ tlsClient_ext ]
 subjectKeyIdentifier = hash
 basicConstraints = critical, CA:FALSE
-keyUsage = critical, digitalSignature, keyEncipherment, keyAgreement
-extendedKeyUsage = critical, serverAuth
+keyUsage = critical, digitalSignature, keyEncipherment
+extendedKeyUsage = critical, clientAuth
 certificatePolicies = 2.5.29.32.0
 # CA-specific extensions like authorityBasicInfo will be appended below on the CA's side
