Loosen CN policy

--- a/default/ca/init/config_header.conf
+++ b/default/ca/init/config_header.conf
@@ -6,7 +6,7 @@ countryName = match
 stateOrProvinceName = match
 localityName = match
 organizationName = match
-commonName = match
+commonName = supplied
 emailAddress = match
 
 [ crl_ext ]
